# zk-solana-101

./: Anchor.toml  README.md  package-lock.json  package.json
circuit/: generate_vkey.sh  multiply2numbers.circom  multiply2numbers_0002.zkey  vk_multiply2numbers.json  vk_to_rs.js
circuit/merkle/: merkle.wasm  merkle.zkey
circuit/multiply2numbers_js/: multiply2numbers.wasm
programs/zk-guide/: Cargo.toml
programs/zk-guide/src/: lib.rs  verifying_key.rs
tests/: zk-guide.ts
